# py_pptx_shrinker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
pptx_shrinker/: __init__.py  __main__.py
