[tool.poetry]
name = "pptx-shrinker"
version = "0.1.1a0"
description = "A Python script to make pptx files smaller by downscaling images contained inside"
authors = ["Maker By Night <2565361+mshafer1@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
shrink-pptx = "pptx_shrinker.__main__:cli"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.3.1"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-snapshot = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ni-python-styleguide = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
